{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 57,
  "lineage": "00763721-1345-140f-7022-d25e8e666e15",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-025e08e304673cbe2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318035413014:subnet/subnet-025e08e304673cbe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025e08e304673cbe2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318035413014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-045d6df981a7065c7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318035413014:subnet/subnet-045d6df981a7065c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045d6df981a7065c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318035413014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0779fdbfd8a619ea3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318035413014:subnet/subnet-0779fdbfd8a619ea3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0779fdbfd8a619ea3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318035413014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-09375700d2c445b38",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318035413014:subnet/subnet-09375700d2c445b38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09375700d2c445b38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318035413014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0a013072d6329b075",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318035413014:subnet/subnet-0a013072d6329b075",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a013072d6329b075",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318035413014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0c6b9b1f077610402",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318035413014:subnet/subnet-0c6b9b1f077610402",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4071,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6b9b1f077610402",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318035413014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318035413014:vpc/vpc-0c7491c1afe4e8fb8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ee4e8469b027a2bc",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-036516cf5b8c315a1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7491c1afe4e8fb8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f57cad467109f82a",
            "owner_id": "318035413014"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:318035413014:loadbalancer/app/expense-tracker-alb/4930d9f318dea9d4",
            "arn_suffix": "app/expense-tracker-alb/4930d9f318dea9d4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "expense-tracker-alb-1155641167.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:318035413014:loadbalancer/app/expense-tracker-alb/4930d9f318dea9d4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "expense-tracker-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d56833cf24e195cf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025e08e304673cbe2"
              },
              {
                "subnet_id": "subnet-045d6df981a7065c7"
              },
              {
                "subnet_id": "subnet-0779fdbfd8a619ea3"
              },
              {
                "subnet_id": "subnet-09375700d2c445b38"
              },
              {
                "subnet_id": "subnet-0a013072d6329b075"
              },
              {
                "subnet_id": "subnet-0c6b9b1f077610402"
              }
            ],
            "subnets": [
              "subnet-025e08e304673cbe2",
              "subnet-045d6df981a7065c7",
              "subnet-0779fdbfd8a619ea3",
              "subnet-09375700d2c445b38",
              "subnet-0a013072d6329b075",
              "subnet-0c6b9b1f077610402"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "expense-tracker-alb",
              "Project": "cis1912-final"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-tracker-alb",
              "Project": "cis1912-final"
            },
            "vpc_id": "vpc-0c7491c1afe4e8fb8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:318035413014:listener/app/expense-tracker-alb/4930d9f318dea9d4/1153923fa930b6d5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:318035413014:targetgroup/expense-tracker-frontend-tg/0a77188b9671379c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:318035413014:listener/app/expense-tracker-alb/4930d9f318dea9d4/1153923fa930b6d5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:318035413014:loadbalancer/app/expense-tracker-alb/4930d9f318dea9d4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:318035413014:targetgroup/expense-tracker-backend-tg/4edc73f62f3e4987",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:318035413014:listener-rule/app/expense-tracker-alb/4930d9f318dea9d4/1153923fa930b6d5/9f10318aeddef727",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:318035413014:listener-rule/app/expense-tracker-alb/4930d9f318dea9d4/1153923fa930b6d5/9f10318aeddef727",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:318035413014:listener/app/expense-tracker-alb/4930d9f318dea9d4/1153923fa930b6d5",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:318035413014:targetgroup/expense-tracker-backend-tg/4edc73f62f3e4987",
            "arn_suffix": "targetgroup/expense-tracker-backend-tg/4edc73f62f3e4987",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:318035413014:targetgroup/expense-tracker-backend-tg/4edc73f62f3e4987",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:318035413014:loadbalancer/app/expense-tracker-alb/4930d9f318dea9d4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "expense-tracker-backend-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "expense-tracker-backend-tg",
              "Project": "cis1912-final"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-tracker-backend-tg",
              "Project": "cis1912-final"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:318035413014:targetgroup/expense-tracker-frontend-tg/0a77188b9671379c",
            "arn_suffix": "targetgroup/expense-tracker-frontend-tg/0a77188b9671379c",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:318035413014:targetgroup/expense-tracker-frontend-tg/0a77188b9671379c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:318035413014:loadbalancer/app/expense-tracker-alb/4930d9f318dea9d4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "expense-tracker-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "expense-tracker-frontend-tg",
              "Project": "cis1912-final"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-tracker-frontend-tg",
              "Project": "cis1912-final"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318035413014:security-group/sg-0d56833cf24e195cf",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d56833cf24e195cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "expense-tracker-alb-sg",
            "name_prefix": "",
            "owner_id": "318035413014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "expense-tracker-alb-sg",
              "Project": "cis1912-final"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-tracker-alb-sg",
              "Project": "cis1912-final"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318035413014:security-group/sg-07ec335f99482ed1f",
            "description": "ECS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ec335f99482ed1f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d56833cf24e195cf"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "expense-tracker-ecs-sg",
            "name_prefix": "",
            "owner_id": "318035413014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "expense-tracker-ecs-sg",
              "Project": "cis1912-final"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-tracker-ecs-sg",
              "Project": "cis1912-final"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318035413014:security-group/sg-07a26f7dc6163a19d",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a26f7dc6163a19d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07ec335f99482ed1f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "expense-tracker-rds-sg",
            "name_prefix": "",
            "owner_id": "318035413014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "expense-tracker-rds-sg",
              "Project": "cis1912-final"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-tracker-rds-sg",
              "Project": "cis1912-final"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7491c1afe4e8fb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}